==> LongDirtyAnimAlf/RotoPD/Firmware/WaveShare/RP2350_GUI/src/CAN/mcp2515.cpp <==
#include "Arduino.h"
#include "hardware/spi.h"
#include "mcp2515.h"
#define BSP_XL2515_SPI_PORT spi0
#define BSP_XL2515_SCLK_PIN 2
#define BSP_XL2515_MOSI_PIN 3
#define BSP_XL2515_MISO_PIN 4
#define BSP_XL2515_CS_PIN 5

void MCP2515::begin()
{
    spi_init(BSP_XL2515_SPI_PORT, SPI_CLOCK);
    gpio_set_function(BSP_XL2515_SCLK_PIN, GPIO_FUNC_SPI);
    gpio_set_function(BSP_XL2515_MOSI_PIN, GPIO_FUNC_SPI);
    gpio_set_function(BSP_XL2515_MISO_PIN, GPIO_FUNC_SPI);

    gpio_init(BSP_XL2515_CS_PIN);
    gpio_init(BSP_XL2515_INT_PIN);

    gpio_set_dir(BSP_XL2515_CS_PIN, GPIO_OUT);
    gpio_put(BSP_XL2515_CS_PIN, 1);

    gpio_set_dir(BSP_XL2515_INT_PIN, GPIO_IN);
    gpio_pull_up(BSP_XL2515_INT_PIN);
}

void MCP2515_ISR_ATTR MCP2515::startSPI() const {
    gpio_put(BSP_XL2515_CS_PIN, 0);    
}

void MCP2515_ISR_ATTR MCP2515::endSPI() const {
    gpio_put(BSP_XL2515_CS_PIN, 1);
}
