==> brocci/arduino-mcp2515/src/mcp2515.cpp <==
#include "Arduino.h"
#include "mcp2515.h"

void MCP2515::begin() {
    pinMode(SPI_CS, OUTPUT);
    digitalWrite(SPI_CS, HIGH);
    SPI_PORT->begin();
}

void MCP2515_ISR_ATTR MCP2515::startSPI() const {
    SPI_PORT->beginTransaction(SPISettings(SPI_CLOCK, MSBFIRST, SPI_MODE0));
    digitalWrite(SPI_CS, LOW);
}

void MCP2515_ISR_ATTR MCP2515::endSPI() const {
    digitalWrite(SPI_CS, HIGH);
    SPI_PORT->endTransaction();
}
